<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_hotel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F2F2F2"
    android:orientation="vertical"
    >
 <include layout="@layout/include_item_title"/>
<View
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_30"/>

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_104"
     android:orientation="horizontal"
     android:background="@drawable/btn_click_style">

  <guominchuxing.tsbooking.view.ClearEditText
      android:id="@+id/et_newPassword"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginLeft="@dimen/dp_22"
      android:layout_weight="4"
      android:background="@null"
      android:hint="@string/str_new_password"
      android:inputType="textPassword"
      android:maxLength="20"
      android:paddingRight="@dimen/dp_22"
      android:textColor="@color/color_989898_font"
      android:textColorHint="@color/color_989898_font"
      android:textSize="@dimen/font_size_small" />

 </LinearLayout>
 <View
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_1"
     />
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_104"
     android:background="@drawable/btn_click_style">

  <guominchuxing.tsbooking.view.ClearEditText
      android:id="@+id/et_one"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginLeft="@dimen/dp_22"
      android:layout_toRightOf="@+id/image2"
      android:background="@null"
      android:hint="@string/str_one"
      android:inputType="textPassword"
      android:maxLength="20"
      android:paddingRight="@dimen/dp_22"
      android:textColor="@color/color_989898_font"
      android:textColorHint="@color/color_989898_font"
      android:textSize="@dimen/font_size_small"
      />
 </RelativeLayout>
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/dp_22"
     android:textColor="@color/color_989898_font"
     android:textSize="@dimen/font_size_small"
     android:text="@string/str_string"/>
 <View
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_46"/>
 <include layout="@layout/include_btn"/>
</LinearLayout>
