<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hotel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F2F2F2"
    android:orientation="vertical"
    >
 <include layout="@layout/include_item_title"/>
 <View
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_22"/>
 <RelativeLayout
     android:id="@+id/rl_order"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_104"
     android:background="@drawable/btn_click_style">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_centerVertical="true"
      android:layout_marginLeft="@dimen/dp_34"
      android:text="@string/str_order"
      android:textColor="@color/color_989898_font" />

  <TextView
      android:id="@+id/tv_order"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:paddingLeft="@dimen/dp_54"
      android:layout_marginLeft="@dimen/dp_160"
      android:textColor="@color/color_666666_font"
      />
 </RelativeLayout>
 <View
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_1"
     android:layout_marginLeft="@dimen/dp_34"/>
 <RelativeLayout
     android:id="@+id/rl_voucher"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_104"
     android:background="@drawable/btn_click_style">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_centerVertical="true"
      android:layout_marginLeft="@dimen/dp_34"
      android:text="@string/str_voucher"
      android:textColor="@color/color_989898_font" />

  <TextView
      android:id="@+id/tv_voucher"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:paddingLeft="@dimen/dp_54"
      android:layout_marginLeft="@dimen/dp_160"
      android:textColor="@color/color_666666_font"
      />
 </RelativeLayout>
 <View
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_1"
     android:layout_marginLeft="@dimen/dp_34"/>
 <RelativeLayout
     android:id="@+id/rl_product"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_104"
     android:background="@drawable/btn_click_style">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_centerVertical="true"
      android:layout_marginLeft="@dimen/dp_34"
      android:text="@string/str_product"
      android:textColor="@color/color_989898_font" />

  <TextView
      android:id="@+id/tv_product"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:paddingLeft="@dimen/dp_54"
      android:layout_marginLeft="@dimen/dp_160"
      android:textColor="@color/color_666666_font"
      />
 </RelativeLayout>
 <View
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_1"
     android:layout_marginLeft="@dimen/dp_34"/>
 <RelativeLayout
     android:id="@+id/rl_linkman"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_104"
     android:background="@drawable/btn_click_style">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_centerVertical="true"
      android:layout_marginLeft="@dimen/dp_34"
      android:text="@string/str_linkman"
      android:textColor="@color/color_989898_font" />

  <TextView
      android:id="@+id/tv_linkman"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:paddingLeft="@dimen/dp_54"
      android:layout_marginLeft="@dimen/dp_160"
      android:textColor="@color/color_666666_font"
      />
 </RelativeLayout>
 <View
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_1"
     android:layout_marginLeft="@dimen/dp_34"/>
 <RelativeLayout
     android:id="@+id/rl_proof"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_104"
     android:background="@drawable/btn_click_style">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_centerVertical="true"
      android:layout_marginLeft="@dimen/dp_34"
      android:text="@string/str_proof"
      android:textColor="@color/color_989898_font" />

  <TextView
      android:id="@+id/tv_proof"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:paddingLeft="@dimen/dp_54"
      android:layout_marginLeft="@dimen/dp_160"
      android:textColor="@color/color_666666_font"
      />
 </RelativeLayout>
</LinearLayout>
