<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hotel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    >

    <ImageView
        android:id="@+id/image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/login"
        android:layout_marginTop="@dimen/dp_240"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <RelativeLayout
        android:id="@+id/rl_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image1"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_marginLeft="@dimen/dp_60"
        android:layout_marginRight="@dimen/dp_60"
        >
     <RelativeLayout
         android:id="@+id/rl_1"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_104"
         android:background="@drawable/et_radius">
         <!--<ImageView-->
             <!--android:id="@+id/image2"-->
             <!--android:layout_width="wrap_content"-->
             <!--android:layout_height="wrap_content"-->
             <!--android:layout_centerVertical="true"-->
             <!--android:layout_marginLeft="@dimen/dp_22"-->
             <!--android:background="@mipmap/mobile"/>-->
         <guominchuxing.tsbooking.view.ClearEditText
             android:id="@+id/et_account"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingRight="@dimen/dp_8"
             android:layout_marginLeft="@dimen/dp_78"
             android:background="@null"
             android:textSize="@dimen/font_size_small"
             android:textColor="@color/color_666666_font"
             android:textColorHint="@color/color_666666_font"
             android:inputType="text"
             android:maxLength="20"
             android:hint="@string/str_hotelID"
             />
     </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_104"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_below="@+id/rl_1"
            android:background="@drawable/et_radius">
            <!--<ImageView-->
                <!--android:id="@+id/image3"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_marginLeft="@dimen/dp_22"-->
                <!--android:background="@mipmap/password"/>-->
            <guominchuxing.tsbooking.view.ClearEditText
                android:id="@+id/et_passWord"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="@dimen/dp_8"
                android:layout_marginLeft="@dimen/dp_78"
                android:background="@null"
                android:textSize="@dimen/font_size_small"
                android:textColor="@color/color_666666_font"
                android:textColorHint="@color/color_666666_font"
                android:inputType="textPassword"
                android:maxLength="20"
                android:hint="@string/str_passsword"
                />

        </RelativeLayout>
        <TextView
            android:id="@+id/btn_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/rl_2"
            android:layout_margin="@dimen/dp_18"
            android:textColor="@color/color_55555"
            android:textSize="@dimen/font_size_small"
            android:text="@string/str_forget"/>
        <TextView
            android:id="@+id/btn_login"
            android:layout_below="@+id/rl_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_104"
            android:layout_marginTop="@dimen/dp_128"
            android:background="@drawable/btn_radius_bule"
            android:gravity="center"
            android:textSize="@dimen/font_size_middle"
            android:textColor="@android:color/white"
            android:text="@string/str_login"/>

    </RelativeLayout>
    <!--<RelativeLayout-->
        <!--android:id="@+id/rl_hotel_join"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--&gt;-->
        <!--<ImageView-->
            <!--android:id="@+id/iv_down"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:background="@mipmap/join_down"/>-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_below="@+id/iv_down"-->
            <!--android:layout_marginTop="@dimen/dp_30"-->
            <!--android:layout_marginBottom="@dimen/dp_58"-->
            <!--android:textColor="@color/color_55555"-->
            <!--android:textSize="@dimen/font_size_small"-->
            <!--android:text="@string/str_hotel_join"-->
            <!--/>-->
    <!--</RelativeLayout>-->
</RelativeLayout>
