<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hotel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/color_dbdbdb"
    >
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/bg_ebooking"
        >
        <ImageView
            android:id="@+id/iv_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_margin="@dimen/dp_24"
            android:background="@mipmap/touxiang"
             />

        <ImageView
            android:id="@+id/iv_guomin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/home_hotel"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/iv_me"
            android:layout_marginTop="@dimen/dp_48"
            android:layout_marginBottom="@dimen/dp_20"
            />
        <!--<TextView-->
            <!--android:id="@+id/text1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:text="@string/str_ebooking"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textSize="@dimen/font_size_big"-->
            <!--android:layout_below="@+id/iv_guomin"-->
            <!--android:layout_marginBottom="@dimen/dp_10"-->
            <!--/>-->
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_guomin"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/font_size_small"
            android:textColor="@android:color/white"
            android:text="@string/str_guomin_Tickets"/>
        <RelativeLayout
            android:id="@+id/rl_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text2"
            android:layout_marginTop="@dimen/dp_80"
            android:visibility="gone">
            <ImageView
                android:id="@+id/ic_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_22"
                android:layout_marginRight="@dimen/dp_22"
                android:src="@mipmap/ic_notice"/>
            <guominchuxing.tsbooking.view.AutoScrollTextView
                android:id="@+id/tv_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ic_notice"
                android:textColor="@android:color/white"
                />
        </RelativeLayout>


    </RelativeLayout>
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_18"
        android:layout_below="@id/rl_top"
        />
    <LinearLayout
        android:id="@+id/ll_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:background="@android:color/white"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/rl_inputNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_click_style">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_18"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/input_number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/image1"
                android:textColor="@color/color_font_333333"
                android:text="@string/str_input_number"
                />

        </RelativeLayout>
        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/color_dbdbdb"/>
        <RelativeLayout
            android:id="@+id/rl_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_click_style">

            <ImageView
                android:id="@+id/image2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_18"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/scan"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/image2"
                android:textColor="@color/color_font_333333"
                android:text="@string/str_scan_tickets"
                />

        </RelativeLayout>
    </LinearLayout>
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_18"
        android:layout_below="@id/ll_center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/view2"
        android:background="@android:color/white"
        >
        <RelativeLayout
            android:id="@+id/rl_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_click_style">

            <ImageView
                android:id="@+id/image3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_18"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/history"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/image3"
                android:textColor="@color/color_font_333333"
                android:text="@string/str_history_tickets"
                />

        </RelativeLayout>
        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/color_dbdbdb"/>
        <!--<RelativeLayout-->
            <!--android:id="@+id/rl_tj_form"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@drawable/btn_click_style">-->

            <!--<ImageView-->
                <!--android:id="@+id/image4"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="@dimen/dp_20"-->
                <!--android:layout_marginBottom="@dimen/dp_18"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:background="@mipmap/tj_form"/>-->
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="@dimen/dp_20"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_below="@+id/image4"-->
                <!--android:textColor="@color/color_font_333333"-->
                <!--android:text="@string/str_tongji_form"-->
                <!--/>-->

        <!--</RelativeLayout>-->
        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/color_dbdbdb"/>
        <RelativeLayout
        android:id="@+id/rl_vb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/btn_click_style">

        <ImageView
        android:id="@+id/image4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_18"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/visitor_board"/>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/image4"
        android:textColor="@color/color_font_333333"
        android:text="@string/str_visitor_board"
        />

        </RelativeLayout>
        <View
        android:layout_width="@dimen/dp_1"
        android:layout_height="match_parent"
        android:background="@color/color_dbdbdb"/>
        <RelativeLayout
            android:id="@+id/rl_hotel_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_click_style">

            <ImageView
                android:id="@+id/image5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_18"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/hotel_info"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/image5"
                android:textColor="@color/color_font_333333"
                android:text="@string/str_hotel_info"
                />
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/str"/>
</RelativeLayout>
